--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
-    "postcss": "^8.3.5"
+    "fibers": "^5.0.0",
+    "postcss": "^8.3.5",
+    "sass": "^1.36.0",
+    "sass-loader": "^10.2.0"
   }
 }
