--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
+    "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -27,6 +30,8 @@
     "fibers": "^5.0.0",
     "postcss": "^8.3.5",
     "sass": "^1.36.0",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "cross-env": "^7.0.3",
+    "push-dir": "^0.4.1"
   }
 }
