--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "@tailwindcss/line-clamp": "^0.2.1",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
