--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "swiper": "^6.8.1",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
