update pages & config

--- a/package.json
+++ b/package.json
@@ -14,22 +14,16 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/axios": "^5.13.4",
     "@tailwindcss/line-clamp": "^0.2.1",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "swiper": "^6.8.1",
+    "core-js": "3.9.1",
+    "nuxt": "2.15.3",
+    "swiper": "^6.4.1",
     "vue-awesome-swiper": "^4.1.1",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@nuxtjs/eslint-config": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.0",
-    "eslint": "^7.29.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
     "fibers": "^5.0.0",
     "postcss": "^8.3.5",
     "sass": "^1.36.0",
