--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt": "2.15.3",
     "swiper": "^6.4.1",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-scrollto": "^2.20.0"
+    "vue-scrollto": "^2.20.0",
+    "smooth-scroll-into-view-if-needed": "^1.1.32"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
